--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "@manypkg/cli": "^0.19.1",
     "axios": "^1.3.4",
     "eslint": "^8.21.0",
+    "mobx": "^6.9.0",
+    "mobx-state-tree": "^5.1.8",
     "prettier": "^2.7.1",
     "turbo": "^1.4.2",
     "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "devDependencies": {
+    "mobx-react": "^7.6.0"
+  }
 }
