--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "app/*": ["./packages/app/*"],
       "@my/ui/*": ["./packages/ui/*"]
-    }
+    },
+    "jsx": "react"
   },
   "extends": "expo/tsconfig.base"
 }
