--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,6 +18,7 @@
     "@types/react-native": "^0.70.8",
     "app": "*",
     "babel-plugin-module-resolver": "^4.1.0",
+    "burnt": "^0.10.0",
     "expo": "^47.0.12",
     "expo-constants": "^14.0.2",
     "expo-dev-client": "^2.0.1",
@@ -38,7 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@expo/metro-config": "^0.3.21",
-    "@tamagui/babel-plugin": "1.5.19",
+    "@tamagui/babel-plugin": "1.12.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
     "typescript": "^4.7.4"
