--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web:prod": "yarn workspace next-app build",
     "web:prod:serve": "yarn workspace next-app serve",
     "fix": "manypkg fix",
-    "prettier": "prettier --write './packages/app/*.{ts,tsx,js}'",
+    "prettier": "prettier --write './packages/*.{ts,tsx,js}'",
     "postinstall": "yarn build",
     "build": "yarn workspaces foreach --exclude next-app -pi run build",
     "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader && manypkg upgrade react-native-web-lite"
