--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@manypkg/cli": "^0.19.1",
     "axios": "^1.3.4",
     "eslint": "^8.21.0",
+    "i18next": "^23.2.3",
     "mobx": "^6.9.0",
     "mobx-state-tree": "^5.1.8",
     "prettier": "^2.7.1",
+    "react-i18next": "^13.0.1",
     "turbo": "^1.4.2",
     "typescript": "^4.7.4"
   },
