--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@babel/runtime": "^7.18.9",
     "@manypkg/cli": "^0.19.1",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "axios": "^1.3.4",
     "eslint": "^8.21.0",
     "i18next": "^23.2.3",
