--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "prettier": "^2.7.1",
     "react-i18next": "^13.0.1",
     "turbo": "^1.4.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vercel": "^31.0.1"
   },
   "packageManager": "yarn@3.6.1",
   "devDependencies": {
