--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fix": "manypkg fix",
     "prettier": "prettier --write './packages/*.{ts,tsx,js}'",
     "postinstall": "yarn build",
+    "deploy": "vercel --prod",
     "build": "yarn workspaces foreach --exclude next-app -pi run build",
     "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader && manypkg upgrade react-native-web-lite"
   },
@@ -31,6 +32,7 @@
     "@babel/runtime": "^7.18.9",
     "@manypkg/cli": "^0.19.1",
     "@react-native-async-storage/async-storage": "^1.18.2",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.4",
     "eslint": "^8.21.0",
     "i18next": "^23.2.3",
