--- a/package.json
+++ b/package.json
@@ -37,16 +37,13 @@
     "eslint": "^8.21.0",
     "i18next": "^23.2.3",
     "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "mobx-state-tree": "^5.1.8",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "react-i18next": "^13.0.1",
     "turbo": "^1.4.2",
     "typescript": "^4.7.4",
     "vercel": "^31.0.1"
   },
-  "packageManager": "yarn@3.6.1",
-  "devDependencies": {
-    "mobx-react": "^7.6.0",
-    "prettier": "^2.8.8"
-  }
+  "packageManager": "yarn@3.6.1"
 }
