--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@babel/runtime": "^7.18.9",
     "@manypkg/cli": "^0.19.1",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.4",
     "eslint": "^8.21.0",
