--- a/apps/next/vercel.json
+++ b/apps/next/vercel.json
@@ -1,3 +1,12 @@
 {
-  "installCommand": "yarn set version stable && yarn install"
+  "installCommand": "yarn set version stable && yarn install",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "https://driving-license.org/$1",
+      "has": [
+        { "type": "host", "value": "(.*).driving-license.org" }
+      ]
+    }
+  ]
 }
